Fix spacing in <details /> elements

--- a/public/index.css
+++ b/public/index.css
@@ -41,16 +41,19 @@ nav ul {
 	padding: 0;
 }
 
-.content > section > * + * {
+.content > section > * + *, 
+.content > section > details > * + * {
 	margin-top: 1.25rem;
 }
 
-.content > section > * + :is(ul, ol) {
+.content > section > * + :is(ul, ol),
+.content > section > details > * + :is(ul, ol) {
 	margin-top: 0.30rem;
 }
 
 
-.content > section > :first-child {
+.content > section > :first-child,
+.content > section > details > :first-child {
 	margin-top: 0;
 }
 
